deploy/k8s/aggregators.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-webspa-agg
  namespace: kwetter
  labels:
    app: webspa-agg
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: webspa-agg
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webspa-agg
  namespace: kwetter
spec:
  selector:
    matchLabels:
      app: webspa-agg
  replicas: 1
  template:
    metadata:
      labels:
        app: webspa-agg
    spec:
      containers:
        - name: webspa-agg
          image: luukvdm/kwetter-webspa-agg
          imagePullPolicy: Always
          ports:
            - containerPort: 80
