deploy/k8s/gateways.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-main-gateway
  namespace: kwetter
  labels:
    app: main-gateway
      # oapi_doc: "/swagger/docs/v1/WebSpa"
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: main-gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-gateway
  namespace: kwetter
spec:
  selector:
    matchLabels:
      app: main-gateway
  replicas: 1
  template:
    metadata:
      labels:
        app: main-gateway
    spec:
      containers:
        - name: main-gateway
          image: luukvdm/kwetter-main-gateway
          imagePullPolicy: Always
          ports:
            - containerPort: 80
