deploy/k8s/hub.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-hub
  namespace: kwetter
  labels:
    app: hub
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: hub
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub
  namespace: kwetter
spec:
  selector:
    matchLabels:
      app: hub
  replicas: 1
  template:
    metadata:
      labels:
        app: hub
    spec:
      containers:
        - name: hub
          image: luukvdm/kwetter-hub
          imagePullPolicy: Always
          ports:
            - containerPort: 80
