deploy/k8s/tweet.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-tweet-api
  namespace: kwetter
  labels:
    app: tweet-api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: grpc
      port: 10041
      protocol: TCP
      targetPort: 10041
  selector:
    app: tweet-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tweet-api
  namespace: kwetter
spec:
  selector:
    matchLabels:
      app: tweet-api
  replicas: 1
  template:
    metadata:
      labels:
        app: tweet-api
    spec:
      containers:
        - name: tweet-api
          image: luukvdm/kwetter-tweet-api
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tweet-db
  namespace: kwetter
spec:
  selector:
    matchLabels:
      app: tweet-db
  replicas: 1
  template:
    metadata:
      labels:
        app: tweet-db
    spec:
      containers:
        - name: tweet-db
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: sqlscript
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: sqlscript
          configMap:
            name: pg-init-script
---
apiVersion: v1
kind: Service
metadata:
  name: svc-tweet-db
  namespace: kwetter
  labels:
    app: tweet-db
spec:
  type: ClusterIP
  ports:
  - port: 5432
  selector:
    app: tweet-db
