deploy/k8s/userrelations.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-urelations-api
  namespace: kwetter
  labels:
    app: urelations-api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: grpc
      port: 10041
      protocol: TCP
      targetPort: 10041
  selector:
    app: urelations-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: urelations-api
  namespace: kwetter
spec:
  selector:
    matchLabels:
      app: urelations-api
  replicas: 1
  template:
    metadata:
      labels:
        app: urelations-api
    spec:
      containers:
        - name: urelations-api
          image: luukvdm/kwetter-userrelations-api
          imagePullPolicy: Always
          ports:
            - containerPort: 80
            - containerPort: 10041
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: urelations-db
  namespace: kwetter
spec:
  selector:
    matchLabels:
      app: urelations-db
  replicas: 1
  template:
    metadata:
      labels:
        app: urelations-db
    spec:
      containers:
        - name: urelations-db
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: sqlscript
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: sqlscript
          configMap:
            name: pg-init-script
---
apiVersion: v1
kind: Service
metadata:
  name: svc-urelations-db
  namespace: kwetter
  labels:
    app: urelations-db
spec:
  type: ClusterIP
  ports:
  - port: 5432
  selector:
    app: urelations-db
