deploy/k8s/webspa.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-webspa
  namespace: kwetter
  labels:
    app: webspa
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: webspa
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webspa
  namespace: kwetter
spec:
  selector:
    matchLabels:
      app: webspa
  replicas: 1
  template:
    metadata:
      labels:
        app: webspa
    spec:
      containers:
        - name: webspa
          image: luukvdm/kwetter-webspa
          imagePullPolicy: Always
          ports:
            - containerPort: 80
